tests/samples/compile_errors/end_terminator/end_function_closes_sub.bas
Attribute VB_Name = "BadEnd2"
Option Explicit

Sub DoStuff()
    Debug.Print 1
End Function
